[tool.poetry]
name = "clipstick"
version = "0.1.3"
description = "A cli tool based on Pydantic models."
license = "MIT"
authors = ["Sander Teunissen <s.teunissen@gmail.co>"]
readme = "README.md"
repository = "https://github.com/sander76/clipstick"
keywords = ["cli", "pydantic", "command line interface"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
mypy = ">=1.5.1"
pytest = ">=7.4.2"
ruff = ">=0.0.291"
nox = ">=2023.4.22"
black = ">=23.9.1"
cogapp = ">=3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    'E501', # line-length. Black handles this.
]
