[tool.poetry]
name = "clipstick"
version = "0.3.12"
description = "A pydantic cli creation tool based on Pydantic models."
license = "MIT"
authors = ["Sander Teunissen <s.teunissen@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sander76/clipstick"
documentation = "https://sander76.github.io/clipstick/index.html"
keywords = [
    "pydantic cli",
    "pydantic",
    "cli",
    "command line interface",
    "argparse",
    'click',
    'typer',
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.3.0"
rich = "^13.6.0"


[tool.poetry.group.dev.dependencies]
mypy = ">=1.5.1"
pytest = ">=7.4.2"
ruff = ">=0.0.291"
nox = ">=2023.4.22"
black = ">=23.9.1"
cogapp = ">=3.3.0"
coverage = "^7.3.2"
cairosvg = "^2.7.1"
icdiff = "^2.0.7"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.25.2"
furo = "^2023.9.10"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    'E501', # line-length. Black handles this.
]

[tool.coverage.report]
fail_under = 96
